# INTENT-EXECUTION-LAYER

./: .gitignore  ABOUT.md  CMakeLists.txt  README.md  main.cpp
.agents/skills/high-level-thinker/: SKILL.md
.github/instructions/: constitution.instructions.md
core/accessibility/include/: AccessibilityLayer.h  UiElement.h
core/accessibility/src/: AccessibilityLayer.cpp
core/action/include/: ActionInterface.h
core/action/src/: ActionInterface.cpp
core/capability/include/: CapabilityExtractor.h  CapabilityGraph.h
core/capability/src/: CapabilityExtractor.cpp  CapabilityGraph.cpp
core/event/include/: EventBus.h  Logger.h  SystemWatchers.h
core/event/src/: EventBus.cpp  Logger.cpp  SystemWatchers.cpp
core/execution/include/: ActionSequence.h  Adapter.h  ControlRuntime.h  DecisionInterfaces.h  EnvironmentAdapter.h  ExecutionContract.h  ExecutionEngine.h  RevealExecutor.h  ScreenPerception.h
core/execution/src/: ActionSequence.cpp  Adapter.cpp  ControlRuntime.cpp  DecisionInterfaces.cpp  EnvironmentAdapter.cpp  ExecutionContract.cpp  ExecutionEngine.cpp  RevealExecutor.cpp  ScreenPerception.cpp
core/intent/include/: Intent.h  IntentNormalizer.h  IntentRegistry.h  IntentResolver.h
core/intent/src/: Intent.cpp  IntentNormalizer.cpp  IntentRegistry.cpp  IntentResolver.cpp
core/interaction/include/: AIStateView.h  InteractionGraph.h  TaskInterface.h
core/interaction/src/: AIStateView.cpp  InteractionGraph.cpp  TaskInterface.cpp
core/observer/include/: ObserverEngine.h
core/observer/src/: ObserverEngine.cpp
core/platform/include/: PlatformLayer.h
core/platform/src/: PlatformLayer.cpp
core/reflex/include/: ReflexCoordination.h  UniversalReflexEngine.h
core/reflex/src/: ReflexCoordination.cpp  UniversalReflexEngine.cpp
core/telemetry/include/: Telemetry.h
core/telemetry/src/: Telemetry.cpp
docs/: adapter_sdk.md  affordance_model.md  ai_sdk.md  anticipation_engine.md  architecture.md  context_handoff.md  continuous_control.md  issues_and_errors.md  parity.md  reflex_coordination.md  reflex_runtime.md  skill_system.md  status.md  temporal_strategy.md  universal_reflex_engine.md  vision.md  world_model_spec.md
interface/api/include/: IntentApiServer.h
interface/api/src/: IntentApiServer.cpp
interface/cli/include/: CliApp.h  CliParser.h
interface/cli/src/: CliApp.cpp  CliParser.cpp
interface/sdk/examples/: ai_client_example.cpp
interface/sdk/include/: IEEClient.h
interface/sdk/src/: IEEClient.cpp
tests/: TestHelpers.h  integration_action_interface.cpp  integration_api_hardening.cpp  integration_closed_loop_feedback.cpp  integration_control_runtime.cpp  integration_execution_filesystem.cpp  integration_failure_injection.cpp  integration_universal_reflex.cpp  scenario_action_interface.cpp  scenario_resolution.cpp  scenario_task_interface.cpp  scenario_uig_hidden_exposure.cpp  stress_execution_loop.cpp  stress_screen_pipeline.cpp  unit_adapter_reliability.cpp  unit_capability_extractor.cpp  unit_intent_schema.cpp  unit_interaction_graph.cpp  unit_observation_pipeline.cpp  unit_screen_perception.cpp  unit_telemetry.cpp
